# OOP_02_lab

./: CMakeLists.txt  Readme.md
include/: array.h  base_array.h  base_array.tpp  four.h
src/: array.cpp  four.cpp  main.cpp
tests/: test_array.cpp  test_four.cpp
